<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                android:background="#e0202020"
    >
    <TextView
        android:id="@+id/basic_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:textColor="#cccccc"
        android:text="@string/select_fov"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/basic_dialog_title"
        android:layout_alignBaseline="@id/basic_dialog_title"
        android:textSize="11sp"
        android:text="@string/select_fov_subtitle"
        android:textColor="#616161"
        />
    <com.jiayue.vr.seekbar.DiscreteSeekBar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="0dp"
        android:layout_marginTop="70dp"
        app:dsb_min="60"
        app:dsb_max="130"
        app:dsb_trackColor="@color/track_color"
        app:dsb_best_trackColor="@color/positive_normal_color"
        app:dsb_trackHeight="@dimen/track_height"
        app:dsb_thumbColor="@color/toolbar_title_color"
        app:dsb_progressColor="#00000000"
        app:dsb_rippleColor="@color/positive_normal_color"
        app:dsb_indicatorColor="@color/positive_normal_color"
        android:layout_marginBottom="@dimen/padding_10"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/discrete"
        android:textSize="11sp"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/angle_60"
        />
    <TextView
        android:id="@+id/best_min_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/discrete"
        android:textSize="11sp"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/angle_80"
        />
    <TextView
        android:id="@+id/best_max_angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/discrete"
        android:textSize="11sp"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/angle_90"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/discrete"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:textSize="11sp"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/angle_130"
        />
    <View
        android:id="@+id/best_angel_des"
        android:layout_below="@id/best_min_angle"
        android:layout_width="20dp"
        android:layout_height="3dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/positive_normal_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/best_min_angle"
        android:layout_alignBaseline="@id/best_angel_des"
        android:layout_toRightOf="@id/best_angel_des"
        android:layout_marginTop="24dp"
        android:textSize="11sp"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/best_angel_des"
        />

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:paddingRight="32dp"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:textSize="14sp"
        android:textColor="@color/positive_normal_color"
        android:text="@string/ok"
        />

    <TextView
        android:id="@+id/btn_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btn_submit"
        android:layout_alignParentBottom="true"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:paddingLeft="24dp"
        android:textSize="14sp"
        android:textColor="@color/toolbar_title_color"
        android:text="@string/cancel" />
</RelativeLayout>